[gd_scene load_steps=13 format=3 uid="uid://b264ja6tthvh3"]

[ext_resource type="Script" uid="uid://dxuoj0kx3dj68" path="res://scripts/menu_1.gd" id="1_3bptp"]
[ext_resource type="Shader" uid="uid://c81wpy13vigw7" path="res://scenes/menu1.gdshader" id="2_3bptp"]
[ext_resource type="FontFile" uid="uid://dhqb677wbwrwx" path="res://VT323-Regular.ttf" id="3_gwq5r"]
[ext_resource type="AudioStream" uid="uid://cq5t57dd6fs5k" path="res://AUDIO JUEGO/Menú_1.ogg" id="4_wt27j"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_wt27j"]
shader = ExtResource("2_3bptp")
shader_parameter/speed = 0.2
shader_parameter/symbol_color = Color(0.3, 0.05, 0.05, 1)
shader_parameter/background_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0e48y"]
bg_color = Color(0.8627451, 0.627451, 0.24705882, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_epypp"]
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0hol4"]
bg_color = Color(0.16470589, 0.16470589, 0.16470589, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3bptp"]
bg_color = Color(0.6039216, 0.13725491, 0.09411765, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wt27j"]
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gwq5r"]
bg_color = Color(0.16470589, 0.16470589, 0.16470589, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qwrrc"]
bg_color = Color(0.5410448, 0.6317629, 0.5138619, 1)
draw_center = false

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -2.0
offset_right = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_3bptp")
metadata/_edit_vertical_guides_ = [454.0]

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_wt27j")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="Play" type="Button" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -116.5
offset_top = -257.0
offset_right = 131.5
offset_bottom = -188.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(0.16078432, 0.14117648, 0.10980392, 1)
theme_override_fonts/font = ExtResource("3_gwq5r")
theme_override_font_sizes/font_size = 45
theme_override_styles/normal = SubResource("StyleBoxFlat_0e48y")
theme_override_styles/pressed = SubResource("StyleBoxFlat_epypp")
theme_override_styles/hover = SubResource("StyleBoxFlat_0hol4")
text = "NUEVA PARTIDA"

[node name="Continuar" type="Button" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -118.5
offset_top = -456.0
offset_right = 129.5
offset_bottom = -387.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(0.16078432, 0.14117648, 0.10980392, 1)
theme_override_fonts/font = ExtResource("3_gwq5r")
theme_override_font_sizes/font_size = 45
theme_override_styles/normal = SubResource("StyleBoxFlat_0e48y")
theme_override_styles/pressed = SubResource("StyleBoxFlat_epypp")
theme_override_styles/hover = SubResource("StyleBoxFlat_0hol4")
text = "CONTINUAR"

[node name="Salir" type="Button" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -117.5
offset_top = -357.0
offset_right = 130.5
offset_bottom = -288.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(0.13725491, 0.11764706, 0.09019608, 1)
theme_override_fonts/font = ExtResource("3_gwq5r")
theme_override_font_sizes/font_size = 45
theme_override_styles/normal = SubResource("StyleBoxFlat_3bptp")
theme_override_styles/pressed = SubResource("StyleBoxFlat_wt27j")
theme_override_styles/hover = SubResource("StyleBoxFlat_gwq5r")
text = "SALIR"

[node name="Silencio en Plupsovia" type="LineEdit" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -574.0
offset_top = -1.0
offset_right = 576.0
offset_bottom = 140.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.24705882, 0.25882354, 0.21568628, 1)
theme_override_fonts/font = ExtResource("3_gwq5r")
theme_override_font_sizes/font_size = 70
theme_override_styles/normal = SubResource("StyleBoxFlat_qwrrc")
text = "Silencio en Plupsovia"
alignment = 1

[node name="Juego realizado" type="LineEdit" parent="Silencio en Plupsovia"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -576.5
offset_top = 505.0
offset_right = 573.5
offset_bottom = 646.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.24705882, 0.25882354, 0.21568628, 1)
theme_override_fonts/font = ExtResource("3_gwq5r")
theme_override_font_sizes/font_size = 25
theme_override_styles/normal = SubResource("StyleBoxFlat_qwrrc")
text = "Juego realizado por: Hugo Bosque, Miquel Monclús, Victor Millán"
alignment = 1

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_wt27j")
volume_db = -12.0
autoplay = true
parameters/looping = true

[connection signal="pressed" from="Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="Continuar" to="." method="_on_continuar_pressed"]
[connection signal="pressed" from="Salir" to="." method="_on_salir_pressed"]
